Fixed white space on border of page by moving row class into its own div

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
 
 body {
   font-family: "Josefin Slab", serif;
+  width: 100%;
+  height: 100%;
 }
 
 h1 {
@@ -70,6 +72,7 @@ p {
 }
 .row {
   height: auto;
+  max-width: 100%;
 }
 
 /*about*/
